# gym-coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  auth.py  coach.py  config.py  db.py  main.py  repository.py  scheduler.py  telegram.py  tools.py  transcribe.py
migrations/: 001_init.sql  002_onboarding_nudges.sql  003_conversation_summary.sql
tests/: conftest.py  test_agent_loop.py  test_auth_refresh.py  test_bubbles_keyboard.py  test_coach_fallback.py  test_memory.py  test_onboarding_nudge.py  test_scheduler_logic.py  test_telegram_parse.py  test_tools.py
